erDiagram
    %% Bounded Contexts: User Management, Product Management, Order Management, Shopping Cart, Review Management
    
    %% Product Management Context
    Product {
        Guid ProductID
        string UserID
        string Name
        string Description
        float Price
        Guid Stock
        string[] Categoryies
        string ImageUrl
    }
    
    %% Order Management Context
    Order {
        Guid OrderID
        string UserID
        date OrderDate
        float TotalAmount
        string OrderStatus
    }
    
    OrderItem {
        Guid OrderItemID
        Guid OrderID
        Guid ProductID
        string UserID
        Guid Quantity
        float Price
    }
    
    %% Shopping Cart Context
    Cart {
        Guid CartID
        string UserID
        float TotalAmount
    }
    
    CartItem {
        Guid CartItemID
        Guid CartID
        Guid ProductID
        string UserID
        Guid Quantity
        float Price
    }
    
    %% Review Management Context
    Review {
        Guid ReviewID
        Guid ProductID
        string UserID
        Guid Rating
        string Comment
        date ReviewDate
    }

    %% Relationships
    Order ||--|{ OrderItem : contains
    Product ||--o{ OrderItem : includes
    Product ||--o{ Review : has
    Cart ||--|{ CartItem : contains
    Product ||--o{ CartItem : includes
